--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--Set Game-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SetGameViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -194,7 +194,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Set Game" id="tof-vS-z9Q"/>
                     <connections>
-                        <outlet property="cardsView" destination="Bgo-JD-H1t" id="f3M-Zv-TjT"/>
+                        <outlet property="boardOfCardsView" destination="Bgo-JD-H1t" id="f3M-Zv-TjT"/>
                         <outlet property="cheatButton" destination="YpT-I1-7DM" id="Wkf-9D-C1X"/>
                         <outlet property="contentView" destination="8bC-Xf-vdC" id="g2k-aa-fnW"/>
                         <outlet property="dealthreeCardsButton" destination="BO7-IE-LLm" id="pZ5-kg-TY8"/>
